# sorting-agda

./: .gitignore  Ejemplos.agda  InsertionSort.agda  QuickSort.agda  Sorting.agda
doc/: .gitignore  En.lagda  Es.lagda  base.md  build.sh  md_parser.py  pyproject.toml  render.py  template.lagda
slides/: .gitignore  components.jsx  index.mdx  package.json  theme.js
