[tool.poetry]
name = "doc"
version = "0.1.0"
description = ""
authors = ["ggzor <30713864+ggzor@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.1"
mistune = "2.0.0rc1"
attrdict = "^2.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}
pynvim = {version = "^0.4.3", allow-prereleases = true}
pylint = {version = "^2.10.2", allow-prereleases = true}
rope = {version = "^0.19.0", allow-prereleases = true}
pytest = {version = "^6.2.5", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
